--- a/MyChecklists/Resources/Base.lproj/Main.storyboard
+++ b/MyChecklists/Resources/Base.lproj/Main.storyboard
@@ -301,6 +301,9 @@
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hiv-5k-QMg">
                                                     <rect key="frame" x="308" y="6" width="51" height="31.5"/>
                                                     <color key="onTintColor" red="0.015686274510000001" green="0.66274509800000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <connections>
+                                                        <action selector="shouldRemindToggled:" destination="qM2-XU-aVg" eventType="valueChanged" id="kNF-cj-WUx"/>
+                                                    </connections>
                                                 </switch>
                                             </subviews>
                                             <constraints>
